# totrno

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  roadmap.txt
backend/: Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/api/: forms.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: About.vue  Account.vue  Calendar.vue  Contact.vue  Files.vue  Home.vue  Logout.vue  PostTimer.vue  PreTimer.vue  SideNav.vue  SignUp.vue  TimeBar.vue  TopNav.vue  Totrno.vue  Tree1.vue  TreeMenu.vue  nestedDraggable.vue
frontend/src/store/: index.js
frontend/src/store/modules/: files.js  login.js  timeLogs.js
frontend/src/store/services/: api.js  fileService.js  loginService.js  timeLogService.js
nginx/: Dockerfile  dev.conf  prod.conf
nginx/dh-param/: dhparam-2048.pem
